<?xml version="1.0"?>
<package>
  <name>virtual_fixtures</name>
  <version>0.0.0</version>
  <description>The virtual_fixtures package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="gennaro.raiola@gmail.com">Gennaro Raiola</maintainer>

  <license>GPLv2</license>


  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>vf_toolbox</run_depend>
  <run_depend>vf_guides</run_depend>
	

  <export>
    <metapackage/>   
  </export>

</package>
