<?xml version="1.0"?>
<package>
  <name>virtual_mechanism</name>
  <version>0.0.0</version>
  <description>Virtual Mechanism</description>

  <maintainer email="gennaro.raiola@gmail.com">Gennaro Raiola</maintainer>

  <license>GPLv2</license>

  <url type="website">https://github.com/graiola/virtual-fixtures</url>

  <author email="gennaro.raiola@gmail.com">Gennaro Raiola</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>toolbox</build_depend>
  <build_depend>roslib</build_depend>
  <run_depend>toolbox</run_depend>
  <run_depend>roslib</run_depend>

</package>
