<?xml version="1.0"?>
<package format="2">
  <name>virtual_mechanism</name>
  <version>0.0.0</version>
  <description>Virtual Mechanism</description>

  <maintainer email="gennaro.raiola@gmail.com">Gennaro Raiola</maintainer>

  <license>GPLv2</license>

  <url type="website">https://github.com/graiola/virtual-fixtures</url>

  <author email="gennaro.raiola@gmail.com">Gennaro Raiola</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslib</depend>
  <build_depend>vf_toolbox</build_depend>

  <test_depend>rostest</test_depend>

</package>
